<resources>
    <string name="app_name">Arcadia</string>
    <string name="welcome_back">Bienvenue!</string>
    <string name="login_to_continue">Connectez vous pour continuer</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="sign_in">Se connecter</string>
    <string name="create_new_account">Créer un nouveau compte</string>
    <string name="nouveau_compte">Nouveau Compte</string>
    <string name="ajouter_une_image">Ajouter une image</string>
    <string name="nom">Nom</string>
    <string name="confirmer_mot_de_passe">Confirmer mot de passe</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="prenom">Prénom</string>
    <string name="arcadia">Arcadia</string>
    <string name="applogo">AppLogo</string>
    <string name="client_id">695282892275-5cgp30b9jibveku0p308ag188ctuq78i.apps.googleusercontent.com</string>
    <string name="continuer_avec_google">Continuer avec Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="utilisateurs">Utilisateurs</string>
</resources>
